# FBCurses

./: .gitignore
example/: CMakeLists.txt  example  example.cpp
src/: console.cpp  console.hpp  numerical.hpp  threaded_process.cpp  threaded_process.hpp
